--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
         <a href="#" class="btton" id="har">GET STARTED</a>
     </div>
     <div class="mid">
-    <div class="container">
+    <div class="container" id="out">
       <div class="row">
         <h5>BLOCKBUSTER HITS</h5>
-        <div class="col-lg-3">
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-3">
           <div class="card">
             <img src="money-heist-2-1200.jpg">
             <a href="#"><h6> MONEY HEIST</h6></a>
             </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-3">
               <div class="card">
               <img src="sacred-games-season-2-netflix.jpg">
               <a href="#"><h6>SACRED GAMES</h6></a>
               </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-3">
                 <div class="card">
                 <img src="Avengers-Endgame-Film-Review.jpg">
                 <a href="#"><h6>AVENGERS END GAME</h6></a>
                 </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-xs-4 col-sm-6 col-md-6 col-lg-3">
                   <div class="card">
                   <img src="250px-Scam_1992_poster.png">
                   <a href="#"><h6>SCAM 1992</h6></a>
@@ -56,25 +56,25 @@
         </div>
         <div class="row">
           <h5>BLOCKBUSTER HITS</h5>
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card">
               <img src="ext.jpg">
               <a href="#"><h6>EXTRACTION</h6></a>
               </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="card">
                 <img src="Master_review_1200x768.jpeg">
                 <a href="#"><h6>MASTER</h6></a>
                 </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                   <div class="card">
                   <img src="Tenet_movie_poster.jpg">
                   <a href="#"><h6>TENET</h6></a>
                   </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                     <div class="card">
                     <img src="87e99eb0661a04d5350105727ac3be23.jpg">
                     <a href="#"><h6>AVTAR</h6></a>
